# push_swap

./: CMakeLists.txt  Make_test  Makefile  ps.sh  push_swap.h  test.sh  test2.sh
ft_printf/: Makefile  author
ft_printf/inc/: ft_printf.h
ft_printf/libft/: Makefile  author 2  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_clear_table.c  ft_countwords.c  ft_free.c  ft_is_minus_inf.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isinf.c  ft_isnan.c  ft_isprint.c  ft_iterative_factorial.c  ft_iterative_power.c  ft_itoa.c  ft_lltoa.c  ft_llutoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_pow.c  ft_pow_double.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  (+46 more)
ft_printf/src/: check 2.c  check.c  fill_final.c  find 2.c  find.c  find_str_size.c  float_maker 2.c  float_maker.c  float_new_free 2.c  float_new_free.c  float_put.c  floats 2.c  floats.c  ft_printf.c  new_str.c  other.c  parse_format 2.c  parse_format.c  pf_format.c  pf_free.c  pf_lib.c  print_check.c
inc/: not_mine_get_next_line.h  push_swap.h
libft/: Makefile  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_clear_table.c  ft_countwords.c  ft_free.c  ft_is_minus_inf.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isinf.c  ft_isnan.c  ft_isprint.c  ft_iterative_factorial.c  ft_iterative_power.c  ft_itoa.c  ft_lltoa.c  ft_llutoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_pow.c  ft_pow_double.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  (+44 more)
src/: checker.c  delete.c  main.c  main_help.c  new_and_free.c  not_mine_get_next_line.c  operations.c  operations_help.c  print_stacks.c  ps_help.c  push_swap.c  save_data.c  save_data_help.c  small_sort.c  sort.c  sort_3_4_5.c  sort_help.c  sort_main.c  sort_main_help.c  sort_new.c  sort_no_3.c  test_checker  trash.c
