cmake_minimum_required(VERSION 3.15)
project(push_swap C)

set(CMAKE_C_STANDARD 11)

include_directories(ft_printf/inc)
include_directories(ft_printf/libft)
include_directories(inc)

add_executable(push_swap
        ft_printf/inc/ft_printf.h
        ft_printf/libft/ft_atoi.c
        ft_printf/libft/ft_atoi_base.c
        ft_printf/libft/ft_bzero.c
        ft_printf/libft/ft_clear_table.c
        ft_printf/libft/ft_countwords.c
        ft_printf/libft/ft_free.c
        ft_printf/libft/ft_is_minus_inf.c
        ft_printf/libft/ft_isalnum.c
        ft_printf/libft/ft_isalpha.c
        ft_printf/libft/ft_isascii.c
        ft_printf/libft/ft_isdigit.c
        ft_printf/libft/ft_isinf.c
        ft_printf/libft/ft_isnan.c
        ft_printf/libft/ft_isprint.c
        ft_printf/libft/ft_iterative_factorial.c
        ft_printf/libft/ft_iterative_power.c
        ft_printf/libft/ft_itoa.c
        ft_printf/libft/ft_lltoa.c
        ft_printf/libft/ft_llutoa.c
        ft_printf/libft/ft_lstadd.c
        ft_printf/libft/ft_lstdel.c
        ft_printf/libft/ft_lstdelone.c
        ft_printf/libft/ft_lstiter.c
        ft_printf/libft/ft_lstmap.c
        ft_printf/libft/ft_lstnew.c
        ft_printf/libft/ft_memalloc.c
        ft_printf/libft/ft_memccpy.c
        ft_printf/libft/ft_memchr.c
        ft_printf/libft/ft_memcmp.c
        ft_printf/libft/ft_memcpy.c
        ft_printf/libft/ft_memdel.c
        ft_printf/libft/ft_memmove.c
        ft_printf/libft/ft_memset.c
        ft_printf/libft/ft_pow.c
        ft_printf/libft/ft_pow_double.c
        ft_printf/libft/ft_putchar.c
        ft_printf/libft/ft_putchar_fd.c
        ft_printf/libft/ft_putendl.c
        ft_printf/libft/ft_putendl_fd.c
        ft_printf/libft/ft_putnbr.c
        ft_printf/libft/ft_putnbr_fd.c
        ft_printf/libft/ft_putnbr_max.c
        ft_printf/libft/ft_putstr.c
        ft_printf/libft/ft_putstr_fd.c
        ft_printf/libft/ft_sqrt.c
        ft_printf/libft/ft_strcat.c
        ft_printf/libft/ft_strchr.c
        ft_printf/libft/ft_strclr.c
        ft_printf/libft/ft_strcmp.c
        ft_printf/libft/ft_strcpy.c
        ft_printf/libft/ft_strdel.c
        ft_printf/libft/ft_strdup.c
        ft_printf/libft/ft_strequ.c
        ft_printf/libft/ft_striter.c
        ft_printf/libft/ft_striteri.c
        ft_printf/libft/ft_strjoin.c
        ft_printf/libft/ft_strjoin_free.c
        ft_printf/libft/ft_strlcat.c
        ft_printf/libft/ft_strlen.c
        ft_printf/libft/ft_strmap.c
        ft_printf/libft/ft_strmapi.c
        ft_printf/libft/ft_strncat.c
        ft_printf/libft/ft_strncmp.c
        ft_printf/libft/ft_strncpy.c
        ft_printf/libft/ft_strnequ.c
        ft_printf/libft/ft_strnew.c
        ft_printf/libft/ft_strnstr.c
        ft_printf/libft/ft_strrchr.c
        ft_printf/libft/ft_strsplit.c
        ft_printf/libft/ft_strstr.c
        ft_printf/libft/ft_strsub.c
        ft_printf/libft/ft_strtrim.c
        ft_printf/libft/ft_tolower.c
        ft_printf/libft/ft_toupper.c
        ft_printf/libft/ft_ulltoa.c
        ft_printf/libft/get_next_line.c
        ft_printf/libft/itoa_base.c
        ft_printf/libft/libft.h
        ft_printf/libft/number_len.c
        ft_printf/libft/number_len_ll.c
        ft_printf/libft/number_len_ull.c
        ft_printf/libft/to_uppercase.c
        ft_printf/libft/ulltoa_base.c
        ft_printf/src/check.c
        ft_printf/src/fill_final.c
        ft_printf/src/find.c
        ft_printf/src/find_str_size.c
        ft_printf/src/float_maker.c
        ft_printf/src/float_new_free.c
        ft_printf/src/float_put.c
        ft_printf/src/floats.c
        ft_printf/src/ft_printf.c
        ft_printf/src/new_str.c
        ft_printf/src/other.c
        ft_printf/src/parse_format.c
        ft_printf/src/pf_format.c
        ft_printf/src/pf_free.c
        ft_printf/src/pf_lib.c
        ft_printf/src/print_check.c
        inc/push_swap.h
#        src/checker.c
        src/operations.c
        src/push_swap.c
        src/save_data.c
        src/not_mine_get_next_line.c
        src/sort.c
        )
